--- a/src/Components/Products/products.css
+++ b/src/Components/Products/products.css
@@ -1,4 +1,18 @@
-#product-container {
+#product-page-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 120px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#product-page-wrapper #product-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9,10 +23,9 @@
   height: 100vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-top: 120px;
 }
 
-#product-container .product-item {
+#product-page-wrapper #product-container .product-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -41,14 +54,14 @@
 }
 
 @media (max-width: 650px) {
-  #product-container .product-item {
+  #product-page-wrapper #product-container .product-item {
     min-width: 250px;
     max-width: 250px;
     text-align: center;
   }
 }
 
-#product-container .product-item .product-card-disabled {
+#product-page-wrapper #product-container .product-item .product-card-disabled {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -57,7 +70,7 @@
   z-index: 5;
 }
 
-#product-container .product-item img {
+#product-page-wrapper #product-container .product-item img {
   max-width: 80%;
   margin-bottom: 20px;
   border: 2px solid white;
@@ -65,18 +78,18 @@
           box-shadow: #929495 0px 20px 30px -10px;
 }
 
-#product-container .product-item h3 {
+#product-page-wrapper #product-container .product-item h3 {
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-#product-container .product-item .product-shopping-card-icon {
+#product-page-wrapper #product-container .product-item .product-shopping-card-icon {
   position: absolute;
   right: 20px;
   bottom: 20px;
 }
 
-#product-container .product-item .product-shopping-card-icon:hover {
+#product-page-wrapper #product-container .product-item .product-shopping-card-icon:hover {
   cursor: pointer;
   color: #93ec93;
   -webkit-transform: scale(1.1);
