--- a/src/Components/Products/products.scss
+++ b/src/Components/Products/products.scss
@@ -1,64 +1,70 @@
 @import "../../mediaQueries"; 
 
-#product-container { 
-    display: flex; 
-    justify-content: center;
-    width: 100%; 
-    height: 100vh; 
-    flex-wrap: wrap;
+#product-page-wrapper{ 
+    display: flex;
+    flex-direction: column;
     padding-top: 120px; 
-    .product-item { 
-        display: flex;
-        position: relative;
-        flex-direction: column;
+    align-items: center;
+    #product-container { 
+        display: flex; 
         justify-content: center;
-        align-items: center;
-        border-radius: 5%;
-        margin: 5px; 
-        max-width: 300px; 
-        min-width: 300px; 
-        max-height: 450px;
-        min-height: 450px; 
-        background: rgb(109,117,111);
-        background: linear-gradient(315deg, rgba(109,117,111,1) 0%, rgba(12,13,12,1) 35%, rgba(23,23,22,1) 100%); 
-        color: white; 
-        box-shadow: rgb(162, 164, 167) 3px 3px 6px 0px inset, rgba(141, 138, 138, 0.5) -3px -3px 6px 1px inset;
-        @include for-custom-media(650px) { 
-            min-width: 250px;  
-            max-width: 250px;
-            text-align: center;
-        }
-        .product-card-disabled { 
-            position: absolute; 
-            width: 100%; 
-            height: 100%;  
-            background-color: rgba(12,13,12,0.8);  
+        width: 100%; 
+        height: 100vh; 
+        flex-wrap: wrap;
+        .product-item { 
+            display: flex;
+            position: relative;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             border-radius: 5%;
-            z-index: 5;
-        }
-        img { 
-            max-width: 80%;
-            margin-bottom: 20px; 
-            border: 2px solid white; 
-            box-shadow: rgb(146, 148, 149) 0px 20px 30px -10px;
-        }
-        h3 { 
-            font-size: 20px;
-            margin-bottom: 10px; 
-        }
-        .product-shopping-card-icon { 
-            position: absolute;
-            right: 20px; 
-            bottom: 20px; 
-            &:hover { 
-                cursor: pointer;
-                color: rgb(147, 236, 147); 
-                transform: scale(1.1);
-                transition: .4s ease-in-out;
+            margin: 5px; 
+            max-width: 300px; 
+            min-width: 300px; 
+            max-height: 450px;
+            min-height: 450px; 
+            background: rgb(109,117,111);
+            background: linear-gradient(315deg, rgba(109,117,111,1) 0%, rgba(12,13,12,1) 35%, rgba(23,23,22,1) 100%); 
+            color: white; 
+            box-shadow: rgb(162, 164, 167) 3px 3px 6px 0px inset, rgba(141, 138, 138, 0.5) -3px -3px 6px 1px inset;
+            @include for-custom-media(650px) { 
+                min-width: 250px;  
+                max-width: 250px;
+                text-align: center;
+            }
+            .product-card-disabled { 
+                position: absolute; 
+                width: 100%; 
+                height: 100%;  
+                background-color: rgba(12,13,12,0.8);  
+                border-radius: 5%;
+                z-index: 5;
+            }
+            img { 
+                max-width: 80%;
+                margin-bottom: 20px; 
+                border: 2px solid white; 
+                box-shadow: rgb(146, 148, 149) 0px 20px 30px -10px;
+            }
+            h3 { 
+                font-size: 20px;
+                margin-bottom: 10px; 
+            }
+            .product-shopping-card-icon { 
+                position: absolute;
+                right: 20px; 
+                bottom: 20px; 
+                &:hover { 
+                    cursor: pointer;
+                    color: rgb(147, 236, 147); 
+                    transform: scale(1.1);
+                    transition: .4s ease-in-out;
+                }
             }
         }
     }
 }
+
 
 #cart-checkout-loading { 
     display: flex;
